# Rock-Paper-Scissor

./: .gitignore  README.md  inference.ipynb  pyproject.toml
train/: training-rpc.ipynb
utils/: manager.py  models.py
