[tool.poetry]
name = "rpc"
version = "0.1.0"
description = ""
authors = ["Almotasembelah Sharaf <moatasem.sharaf@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.24.3"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
rq = "^2.0.0"
mediapipe = "^0.10.18"
scikit-learn = "^1.5.2"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
